# oklab-palette-generator

./: CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: .gitignore  CLAUDE.md  post-edit-hook.sh  settings.json
.claude/commands/: instruction.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
src/: palette.py  visualize.py
