[project]
name = "ubuntu-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "ANN"]
ignore = ["E501"]

fixable = ["E", "W", "F", "I", "ANN"]
unfixable = ["E501", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"migrations/env.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"
